Python/Compiladores/Proyecto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list ENDFILE
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> fun_declaration
Rule 5     declaration -> var_declaration
Rule 6     var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
Rule 7     var_declaration -> type_specifier ID SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> VOID
Rule 10    fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR compound_stmt
Rule 11    params -> param_list
Rule 12    params -> VOID
Rule 13    param_list -> param_list COMMA param
Rule 14    param_list -> param
Rule 15    param -> type_specifier ID
Rule 16    param -> type_specifier ID OPENBRACKET CLOSEBRACKET
Rule 17    compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE
Rule 18    local_declarations -> local_declarations var_declaration
Rule 19    local_declarations -> <empty>
Rule 20    statement_list -> statement_list statement
Rule 21    statement_list -> <empty>
Rule 22    statement -> compound_stmt
Rule 23    statement -> expression_stmt
Rule 24    statement -> selection_stmt
Rule 25    statement -> iteration_stmt
Rule 26    statement -> return_stmt
Rule 27    expression_stmt -> expression SEMICOLON
Rule 28    expression_stmt -> SEMICOLON
Rule 29    selection_stmt -> IF OPENPAR expression CLOSEPAR statement
Rule 30    selection_stmt -> IF OPENPAR expression CLOSEPAR statement ELSE statement
Rule 31    iteration_stmt -> WHILE OPENPAR expression CLOSEPAR statement
Rule 32    return_stmt -> RETURN SEMICOLON
Rule 33    return_stmt -> RETURN expression SEMICOLON
Rule 34    expression -> var ASSIGN expression
Rule 35    expression -> simple_expression
Rule 36    simple_expression -> additive_expression relop additive_expression
Rule 37    simple_expression -> additive_expression
Rule 38    relop -> LESSER
Rule 39    relop -> LESSEREQ
Rule 40    relop -> GREATER
Rule 41    relop -> GREATEREQ
Rule 42    relop -> EQ
Rule 43    relop -> NOTEQ
Rule 44    additive_expression -> additive_expression addop term
Rule 45    additive_expression -> term
Rule 46    addop -> PLUS
Rule 47    addop -> MINUS
Rule 48    term -> term mulop factor
Rule 49    term -> factor
Rule 50    mulop -> MULT
Rule 51    mulop -> DIV
Rule 52    factor -> var
Rule 53    factor -> call
Rule 54    factor -> NUM
Rule 55    factor -> OPENPAR expression CLOSEPAR
Rule 56    call -> ID OPENPAR args CLOSEPAR
Rule 57    args -> arg_list
Rule 58    args -> <empty>
Rule 59    arg_list -> arg_list COMMA expression
Rule 60    arg_list -> expression
Rule 61    var -> ID
Rule 62    var -> ID OPENBRACKET expression CLOSEBRACKET

Terminals, with rules where they appear

ASSIGN               : 34
CLOSEBRACE           : 17
CLOSEBRACKET         : 6 16 62
CLOSEPAR             : 10 29 30 31 55 56
COMMA                : 13 59
DIV                  : 51
ELSE                 : 30
ENDFILE              : 1
EQ                   : 42
GREATER              : 40
GREATEREQ            : 41
ID                   : 6 7 10 15 16 56 61 62
IF                   : 29 30
INT                  : 8
LESSER               : 38
LESSEREQ             : 39
MINUS                : 47
MULT                 : 50
NOTEQ                : 43
NUM                  : 6 54
OPENBRACE            : 17
OPENBRACKET          : 6 16 62
OPENPAR              : 10 29 30 31 55 56
PLUS                 : 46
RETURN               : 32 33
SEMICOLON            : 6 7 27 28 32 33
VOID                 : 9 12
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

additive_expression  : 36 36 37 44
addop                : 44
arg_list             : 57 59
args                 : 56
call                 : 53
compound_stmt        : 10 22
declaration          : 2 3
declaration_list     : 1 2
expression           : 27 29 30 31 33 34 55 59 60 62
expression_stmt      : 23
factor               : 48 49
fun_declaration      : 4
iteration_stmt       : 25
local_declarations   : 17 18
mulop                : 48
param                : 13 14
param_list           : 11 13
params               : 10
program              : 0
relop                : 36
return_stmt          : 26
selection_stmt       : 24
simple_expression    : 35
statement            : 20 29 30 30 31
statement_list       : 17 20
term                 : 44 45 48
type_specifier       : 6 7 10 15 16
var                  : 34 52
var_declaration      : 5 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list ENDFILE
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . fun_declaration
    (5) declaration -> . var_declaration
    (10) fun_declaration -> . type_specifier ID OPENPAR params CLOSEPAR compound_stmt
    (6) var_declaration -> . type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    fun_declaration                shift and go to state 4
    var_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list . ENDFILE
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . fun_declaration
    (5) declaration -> . var_declaration
    (10) fun_declaration -> . type_specifier ID OPENPAR params CLOSEPAR compound_stmt
    (6) var_declaration -> . type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    ENDFILE         shift and go to state 9
    INT             shift and go to state 7
    VOID            shift and go to state 8

    declaration                    shift and go to state 10
    fun_declaration                shift and go to state 4
    var_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    ENDFILE         reduce using rule 3 (declaration_list -> declaration .)
    INT             reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> fun_declaration .

    ENDFILE         reduce using rule 4 (declaration -> fun_declaration .)
    INT             reduce using rule 4 (declaration -> fun_declaration .)
    VOID            reduce using rule 4 (declaration -> fun_declaration .)


state 5

    (5) declaration -> var_declaration .

    ENDFILE         reduce using rule 5 (declaration -> var_declaration .)
    INT             reduce using rule 5 (declaration -> var_declaration .)
    VOID            reduce using rule 5 (declaration -> var_declaration .)


state 6

    (10) fun_declaration -> type_specifier . ID OPENPAR params CLOSEPAR compound_stmt
    (6) var_declaration -> type_specifier . ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> type_specifier . ID SEMICOLON

    ID              shift and go to state 11


state 7

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> VOID .

    ID              reduce using rule 9 (type_specifier -> VOID .)


state 9

    (1) program -> declaration_list ENDFILE .

    $end            reduce using rule 1 (program -> declaration_list ENDFILE .)


state 10

    (2) declaration_list -> declaration_list declaration .

    ENDFILE         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 11

    (10) fun_declaration -> type_specifier ID . OPENPAR params CLOSEPAR compound_stmt
    (6) var_declaration -> type_specifier ID . OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> type_specifier ID . SEMICOLON

    OPENPAR         shift and go to state 12
    OPENBRACKET     shift and go to state 13
    SEMICOLON       shift and go to state 14


state 12

    (10) fun_declaration -> type_specifier ID OPENPAR . params CLOSEPAR compound_stmt
    (11) params -> . param_list
    (12) params -> . VOID
    (13) param_list -> . param_list COMMA param
    (14) param_list -> . param
    (15) param -> . type_specifier ID
    (16) param -> . type_specifier ID OPENBRACKET CLOSEBRACKET
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    VOID            shift and go to state 18
    INT             shift and go to state 7

    type_specifier                 shift and go to state 15
    params                         shift and go to state 16
    param_list                     shift and go to state 17
    param                          shift and go to state 19

state 13

    (6) var_declaration -> type_specifier ID OPENBRACKET . NUM CLOSEBRACKET SEMICOLON

    NUM             shift and go to state 20


state 14

    (7) var_declaration -> type_specifier ID SEMICOLON .

    ENDFILE         reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    CLOSEBRACE      reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    OPENBRACE       reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    NUM             reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)
    OPENPAR         reduce using rule 7 (var_declaration -> type_specifier ID SEMICOLON .)


state 15

    (15) param -> type_specifier . ID
    (16) param -> type_specifier . ID OPENBRACKET CLOSEBRACKET

    ID              shift and go to state 21


state 16

    (10) fun_declaration -> type_specifier ID OPENPAR params . CLOSEPAR compound_stmt

    CLOSEPAR        shift and go to state 22


state 17

    (11) params -> param_list .
    (13) param_list -> param_list . COMMA param

    CLOSEPAR        reduce using rule 11 (params -> param_list .)
    COMMA           shift and go to state 23


state 18

    (12) params -> VOID .
    (9) type_specifier -> VOID .

    CLOSEPAR        reduce using rule 12 (params -> VOID .)
    ID              reduce using rule 9 (type_specifier -> VOID .)


state 19

    (14) param_list -> param .

    COMMA           reduce using rule 14 (param_list -> param .)
    CLOSEPAR        reduce using rule 14 (param_list -> param .)


state 20

    (6) var_declaration -> type_specifier ID OPENBRACKET NUM . CLOSEBRACKET SEMICOLON

    CLOSEBRACKET    shift and go to state 24


state 21

    (15) param -> type_specifier ID .
    (16) param -> type_specifier ID . OPENBRACKET CLOSEBRACKET

    COMMA           reduce using rule 15 (param -> type_specifier ID .)
    CLOSEPAR        reduce using rule 15 (param -> type_specifier ID .)
    OPENBRACKET     shift and go to state 25


state 22

    (10) fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR . compound_stmt
    (17) compound_stmt -> . OPENBRACE local_declarations statement_list CLOSEBRACE

    OPENBRACE       shift and go to state 27

    compound_stmt                  shift and go to state 26

state 23

    (13) param_list -> param_list COMMA . param
    (15) param -> . type_specifier ID
    (16) param -> . type_specifier ID OPENBRACKET CLOSEBRACKET
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    INT             shift and go to state 7
    VOID            shift and go to state 8

    param                          shift and go to state 28
    type_specifier                 shift and go to state 15

state 24

    (6) var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 29


state 25

    (16) param -> type_specifier ID OPENBRACKET . CLOSEBRACKET

    CLOSEBRACKET    shift and go to state 30


state 26

    (10) fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR compound_stmt .

    ENDFILE         reduce using rule 10 (fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR compound_stmt .)
    INT             reduce using rule 10 (fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR compound_stmt .)
    VOID            reduce using rule 10 (fun_declaration -> type_specifier ID OPENPAR params CLOSEPAR compound_stmt .)


state 27

    (17) compound_stmt -> OPENBRACE . local_declarations statement_list CLOSEBRACE
    (18) local_declarations -> . local_declarations var_declaration
    (19) local_declarations -> .

    INT             reduce using rule 19 (local_declarations -> .)
    VOID            reduce using rule 19 (local_declarations -> .)
    CLOSEBRACE      reduce using rule 19 (local_declarations -> .)
    OPENBRACE       reduce using rule 19 (local_declarations -> .)
    SEMICOLON       reduce using rule 19 (local_declarations -> .)
    IF              reduce using rule 19 (local_declarations -> .)
    WHILE           reduce using rule 19 (local_declarations -> .)
    RETURN          reduce using rule 19 (local_declarations -> .)
    ID              reduce using rule 19 (local_declarations -> .)
    NUM             reduce using rule 19 (local_declarations -> .)
    OPENPAR         reduce using rule 19 (local_declarations -> .)

    local_declarations             shift and go to state 31

state 28

    (13) param_list -> param_list COMMA param .

    COMMA           reduce using rule 13 (param_list -> param_list COMMA param .)
    CLOSEPAR        reduce using rule 13 (param_list -> param_list COMMA param .)


state 29

    (6) var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .

    ENDFILE         reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    INT             reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    CLOSEBRACE      reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    OPENBRACE       reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    NUM             reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)
    OPENPAR         reduce using rule 6 (var_declaration -> type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON .)


state 30

    (16) param -> type_specifier ID OPENBRACKET CLOSEBRACKET .

    COMMA           reduce using rule 16 (param -> type_specifier ID OPENBRACKET CLOSEBRACKET .)
    CLOSEPAR        reduce using rule 16 (param -> type_specifier ID OPENBRACKET CLOSEBRACKET .)


state 31

    (17) compound_stmt -> OPENBRACE local_declarations . statement_list CLOSEBRACE
    (18) local_declarations -> local_declarations . var_declaration
    (20) statement_list -> . statement_list statement
    (21) statement_list -> .
    (6) var_declaration -> . type_specifier ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> . type_specifier ID SEMICOLON
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID

    CLOSEBRACE      reduce using rule 21 (statement_list -> .)
    OPENBRACE       reduce using rule 21 (statement_list -> .)
    SEMICOLON       reduce using rule 21 (statement_list -> .)
    IF              reduce using rule 21 (statement_list -> .)
    WHILE           reduce using rule 21 (statement_list -> .)
    RETURN          reduce using rule 21 (statement_list -> .)
    ID              reduce using rule 21 (statement_list -> .)
    NUM             reduce using rule 21 (statement_list -> .)
    OPENPAR         reduce using rule 21 (statement_list -> .)
    INT             shift and go to state 7
    VOID            shift and go to state 8

    statement_list                 shift and go to state 32
    var_declaration                shift and go to state 33
    type_specifier                 shift and go to state 34

state 32

    (17) compound_stmt -> OPENBRACE local_declarations statement_list . CLOSEBRACE
    (20) statement_list -> statement_list . statement
    (22) statement -> . compound_stmt
    (23) statement -> . expression_stmt
    (24) statement -> . selection_stmt
    (25) statement -> . iteration_stmt
    (26) statement -> . return_stmt
    (17) compound_stmt -> . OPENBRACE local_declarations statement_list CLOSEBRACE
    (27) expression_stmt -> . expression SEMICOLON
    (28) expression_stmt -> . SEMICOLON
    (29) selection_stmt -> . IF OPENPAR expression CLOSEPAR statement
    (30) selection_stmt -> . IF OPENPAR expression CLOSEPAR statement ELSE statement
    (31) iteration_stmt -> . WHILE OPENPAR expression CLOSEPAR statement
    (32) return_stmt -> . RETURN SEMICOLON
    (33) return_stmt -> . RETURN expression SEMICOLON
    (34) expression -> . var ASSIGN expression
    (35) expression -> . simple_expression
    (61) var -> . ID
    (62) var -> . ID OPENBRACKET expression CLOSEBRACKET
    (36) simple_expression -> . additive_expression relop additive_expression
    (37) simple_expression -> . additive_expression
    (44) additive_expression -> . additive_expression addop term
    (45) additive_expression -> . term
    (48) term -> . term mulop factor
    (49) term -> . factor
    (52) factor -> . var
    (53) factor -> . call
    (54) factor -> . NUM
    (55) factor -> . OPENPAR expression CLOSEPAR
    (56) call -> . ID OPENPAR args CLOSEPAR

    CLOSEBRACE      shift and go to state 35
    OPENBRACE       shift and go to state 27
    SEMICOLON       shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    ID              shift and go to state 50
    NUM             shift and go to state 55
    OPENPAR         shift and go to state 45

    statement                      shift and go to state 36
    compound_stmt                  shift and go to state 37
    expression_stmt                shift and go to state 38
    selection_stmt                 shift and go to state 39
    iteration_stmt                 shift and go to state 40
    return_stmt                    shift and go to state 41
    expression                     shift and go to state 42
    var                            shift and go to state 48
    simple_expression              shift and go to state 49
    additive_expression            shift and go to state 51
    term                           shift and go to state 52
    factor                         shift and go to state 53
    call                           shift and go to state 54

state 33

    (18) local_declarations -> local_declarations var_declaration .

    INT             reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    VOID            reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    CLOSEBRACE      reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    OPENBRACE       reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    SEMICOLON       reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    IF              reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    WHILE           reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    RETURN          reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    ID              reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    NUM             reduce using rule 18 (local_declarations -> local_declarations var_declaration .)
    OPENPAR         reduce using rule 18 (local_declarations -> local_declarations var_declaration .)


state 34

    (6) var_declaration -> type_specifier . ID OPENBRACKET NUM CLOSEBRACKET SEMICOLON
    (7) var_declaration -> type_specifier . ID SEMICOLON

    ID              shift and go to state 56


state 35

    (17) compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .

    ENDFILE         reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    INT             reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    VOID            reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    CLOSEBRACE      reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    OPENBRACE       reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    SEMICOLON       reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    IF              reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    WHILE           reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    RETURN          reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    ID              reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    NUM             reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    OPENPAR         reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)
    ELSE            reduce using rule 17 (compound_stmt -> OPENBRACE local_declarations statement_list CLOSEBRACE .)


state 36

    (20) statement_list -> statement_list statement .

    CLOSEBRACE      reduce using rule 20 (statement_list -> statement_list statement .)
    OPENBRACE       reduce using rule 20 (statement_list -> statement_list statement .)
    SEMICOLON       reduce using rule 20 (statement_list -> statement_list statement .)
    IF              reduce using rule 20 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 20 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 20 (statement_list -> statement_list statement .)
    ID              reduce using rule 20 (statement_list -> statement_list statement .)
    NUM             reduce using rule 20 (statement_list -> statement_list statement .)
    OPENPAR         reduce using rule 20 (statement_list -> statement_list statement .)


state 37

    (22) statement -> compound_stmt .

    CLOSEBRACE      reduce using rule 22 (statement -> compound_stmt .)
    OPENBRACE       reduce using rule 22 (statement -> compound_stmt .)
    SEMICOLON       reduce using rule 22 (statement -> compound_stmt .)
    IF              reduce using rule 22 (statement -> compound_stmt .)
    WHILE           reduce using rule 22 (statement -> compound_stmt .)
    RETURN          reduce using rule 22 (statement -> compound_stmt .)
    ID              reduce using rule 22 (statement -> compound_stmt .)
    NUM             reduce using rule 22 (statement -> compound_stmt .)
    OPENPAR         reduce using rule 22 (statement -> compound_stmt .)
    ELSE            reduce using rule 22 (statement -> compound_stmt .)


state 38

    (23) statement -> expression_stmt .

    CLOSEBRACE      reduce using rule 23 (statement -> expression_stmt .)
    OPENBRACE       reduce using rule 23 (statement -> expression_stmt .)
    SEMICOLON       reduce using rule 23 (statement -> expression_stmt .)
    IF              reduce using rule 23 (statement -> expression_stmt .)
    WHILE           reduce using rule 23 (statement -> expression_stmt .)
    RETURN          reduce using rule 23 (statement -> expression_stmt .)
    ID              reduce using rule 23 (statement -> expression_stmt .)
    NUM             reduce using rule 23 (statement -> expression_stmt .)
    OPENPAR         reduce using rule 23 (statement -> expression_stmt .)
    ELSE            reduce using rule 23 (statement -> expression_stmt .)


state 39

    (24) statement -> selection_stmt .
